# Lab14-AI-Evaluation-Benchmarking

./: CLAUDE.md  main.py  pyproject.toml
agent/: main_agent.py  pre.py  retrieval.py
analysis/: failure_analysis.md
analysis/reflections/: reflection_Bethokawaii.md  reflection_HoangDinhDuyAnh.md  reflection_NguyenTienHuyHoang.md  reflection_TranThanhPhong.md  reflection_dduyanhhoang.md  reflection_thnhphng04.md  reflection_trannhatvi-ai.md  reflection_trannhatvi.md
data/: chunks.jsonl  golden_set.jsonl  synthetic_gen.py
data/raw/: ml_2.md
engine/: llm_judge.py  retrieval_eval.py  runner.py
reports/: benchmark_results.json  summary.json
